fixed docs typo

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,6 +67,4 @@ workflows:
   test-and-build:
     jobs:
       - go-fmt-and-vet
-      - go-test:
-          requires:
-            - go-fmt-and-vet
+      - go-test
