--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -2,48 +2,50 @@ name: hashicorp/go-memdb/test-and-build
 on:
   push:
     branches:
-    - main
+      - main
 jobs:
   go-fmt-and-vet:
     runs-on: ubuntu-latest
     container:
       image: docker.mirror.hashicorp.services/circleci/golang:1.16.7
     steps:
-    - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
-    - name: restore_cache
-      uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
-      with:
-        key: go-memdb-modcache-v1-{{ checksum "go.mod" }}
-        restore-keys: go-memdb-modcache-v1-{{ checksum "go.mod" }}
-        path: "/go/pkg/mod"
-    - run: go mod download
-    - name: check go fmt
-      run: |-
-        files=$(go fmt ./...)
-        if [ -n "$files" ]; then
-          echo "The following file(s) do not conform to go fmt:"
-          echo "$files"
-          exit 1
-        fi
-    - run: go vet ./...
+      - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
+      - name: restore_cache
+        uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
+        with:
+          key: go-memdb-modcache-v1-{{ checksum "go.mod" }}
+          restore-keys: go-memdb-modcache-v1-{{ checksum "go.mod" }}
+          path: "/go/pkg/mod"
+      - run: go mod download
+      - name: check go fmt
+        run: |-
+          files=$(go fmt ./...)
+          if [ -n "$files" ]; then
+            echo "The following file(s) do not conform to go fmt:"
+            echo "$files"
+            exit 1
+          fi
+      - run: go vet ./...
   go-test:
     runs-on: ubuntu-latest
     container:
       image: docker.mirror.hashicorp.services/circleci/golang:1.16.7
     steps:
-    - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
-    - run: mkdir -p $TEST_RESULTS
-    - name: restore_cache
-      uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
-      with:
-        key: go-memdb-modcache-v1-{{ checksum "go.mod" }}
-        restore-keys: go-memdb-modcache-v1-{{ checksum "go.mod" }}
-    - run: |
-        PACKAGE_NAMES=$(go list ./...)
-        gotestsum --format=short-verbose --junitfile $TEST_RESULTS/gotestsum-report.xml -- $PACKAGE_NAMES
-    - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
-      with:
-        path: "/tmp/test-results"
-    - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
-      with:
-        path: "/tmp/test-results"
+      - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
+      - run: mkdir -p $TEST_RESULTS
+      - name: restore_cache
+        uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
+        with:
+          key: go-memdb-modcache-v1-{{ checksum "go.mod" }}
+          restore-keys: go-memdb-modcache-v1-{{ checksum "go.mod" }}
+      - run: |
+          PACKAGE_NAMES=$(go list ./...)
+          gotestsum --format=short-verbose --junitfile $TEST_RESULTS/gotestsum-report.xml -- $PACKAGE_NAMES
+      - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
+        with:
+          path: "/tmp/test-results"
+      - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
+        with:
+          path: "/tmp/test-results"
+permissions:
+  contents: read
