--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -1,23 +1,21 @@
-name: hashicorp/go-memdb/test-and-build
+name: Test and Build
+
 on:
   push:
-    branches:
-      - main
+
+permissions:
+  contents: read
+
 jobs:
-  go-fmt-and-vet:
+  lint:
     runs-on: ubuntu-latest
-    container:
-      image: docker.mirror.hashicorp.services/circleci/golang:1.16.7
     steps:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
-      - name: restore_cache
-        uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
+      - uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v4.0.0
         with:
-          key: go-memdb-modcache-v1-{{ checksum "go.mod" }}
-          restore-keys: go-memdb-modcache-v1-{{ checksum "go.mod" }}
-          path: "/go/pkg/mod"
+          go-version-file: go.mod
       - run: go mod download
-      - name: check go fmt
+      - name: Check Formatting
         run: |-
           files=$(go fmt ./...)
           if [ -n "$files" ]; then
@@ -25,27 +23,33 @@ jobs:
             echo "$files"
             exit 1
           fi
-      - run: go vet ./...
+      - name: Vet code
+        run: go vet ./...
+
   go-test:
     runs-on: ubuntu-latest
-    container:
-      image: docker.mirror.hashicorp.services/circleci/golang:1.16.7
+    strategy:
+      matrix:
+        go-version:
+          - '1.13' # oldest supported; named in go.mod
+          - 'oldstable'
+          - 'stable'
+    env:
+      TEST_RESULTS_PATH: '/tmp/test-results'
     steps:
       - uses: actions/checkout@8f4b7f84864484a7bf31766abe9204da3cbe65b3 # v3.5.0
-      - run: mkdir -p $TEST_RESULTS
-      - name: restore_cache
-        uses: actions/cache@88522ab9f39a2ea568f7027eddc7d8d8bc9d59c8 # v3.3.1
+      - uses: actions/setup-go@4d34df0c2316fe8122ab82dc22947d607c0c91f9 # v4.0.0
         with:
-          key: go-memdb-modcache-v1-{{ checksum "go.mod" }}
-          restore-keys: go-memdb-modcache-v1-{{ checksum "go.mod" }}
-      - run: |
-          PACKAGE_NAMES=$(go list ./...)
-          gotestsum --format=short-verbose --junitfile $TEST_RESULTS/gotestsum-report.xml -- $PACKAGE_NAMES
+          go-version: ${{ matrix.go-version }}
+      - uses: autero1/action-gotestsum@2e48af62f5248bd3b014f598cd1aa69a01dd36e3 # v1.0.0
+        with:
+          gotestsum_version: 1.9.0
+
+      - run: mkdir -p "$TEST_RESULTS_PATH"
+      - name: Run go tests
+        run: |
+          gotestsum --format=short-verbose --junitfile "$TEST_RESULTS_PATH/gotestsum-report.xml" -- ./...
       - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
         with:
-          path: "/tmp/test-results"
-      - uses: actions/upload-artifact@0b7f8abb1508181956e8e162db84b466c27e18ce # v3.1.2
-        with:
-          path: "/tmp/test-results"
-permissions:
-  contents: read
+          path: ${{ env.TEST_RESULTS_PATH }}
+          name: tests-linux
