IND-2527 workflow updated with linting, .go-version file added

--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -1,7 +1,8 @@
 name: Test and Build
 
 on:
-  push:
+  - push
+  - pull_request
 
 permissions:
   contents: read
@@ -28,6 +29,8 @@ jobs:
           fi
       - name: Vet code
         run: go vet ./...
+      - name: Run golangci-lint
+        uses: golangci/golangci-lint-action@08e2f20817b15149a52b5b3ebe7de50aff2ba8c5
 
   go-test:
     runs-on: ubuntu-latest
