--- a/.github/workflows/test-and-build.yml
+++ b/.github/workflows/test-and-build.yml
@@ -37,7 +37,7 @@ jobs:
     strategy:
       matrix:
         go-version:
-          - '1.13' # oldest supported; named in go.mod
+          - '1.23' # named in go.mod
           - 'oldstable'
           - 'stable'
     env:
