--- a/.github/workflows/two-step-pr-approval.yml
+++ b/.github/workflows/two-step-pr-approval.yml
@@ -13,8 +13,8 @@ jobs:
       pull-requests: write
       contents: write
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
+      - name: Checkout code
+        uses: actions/checkout@v4
       
-      - name: Two stage PR approval
-        uses: hashicorp/two-stage-pr-approval@chore/refactor-to-make-reusable-action
+      - name: Two stage PR review
+        uses: hashicorp/two-stage-pr-approval@v0.1.0
