--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@3df4ab11eba7bda6032a0b82a6bb43b11571feac # v4.0.0
+        uses: actions/checkout@v4 # Updated to v4
         with:
           fetch-depth: 0
 
@@ -71,10 +71,10 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: GitHub Release (with zip archives only)
-        uses: goreleaser/goreleaser-action@7ec5c2b0c6cdda6e8bbb49444bc797dd33d74dd8 # v5.0.0
+        uses: goreleaser/goreleaser-action@v5 # Updated to v5
         with:
           version: latest
-          args: release --snapshot --rm-dist --skip-validate --skip-sign --skip-publish --timeout "30m"
+          args: release --snapshot --clean --skip-validate --skip-sign --skip-publish --timeout "30m" # Changed --rm-dist to --clean
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
