--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,7 +21,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4 # Updated to v4
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -31,7 +31,6 @@ jobs:
           latest_tag=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
           echo "Latest tag: $latest_tag"
 
-          # Remove 'v' prefix for version comparison
           current_version=${latest_tag#v}
           IFS='.' read -r -a version_parts <<< "$current_version"
           major=${version_parts[0]}
@@ -70,14 +69,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: GitHub Release (with zip archives only)
-        uses: goreleaser/goreleaser-action@v5 # Updated to v5
-        with:
-          version: latest
-          args: release --snapshot --clean --skip-validate --skip-sign --skip-publish --timeout "30m" # Changed --rm-dist to --clean
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Create GitHub Release
         id: create_release
         uses: actions/create-release@v1
@@ -88,13 +79,3 @@ jobs:
           release_name: Release ${{ steps.get_new_version.outputs.new_release_version }}
           draft: false
           prerelease: false
-
-      - name: Upload Release Assets
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        with:
-          files: |
-            ./dist/*.zip
-            ./dist/*.tar.gz
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
